Completing api documentation.
